--- a/aa_ab_mkt_test.ipynb
+++ b/aa_ab_mkt_test.ipynb
@@ -5,7 +5,7 @@
    "id": "efefd8cd",
    "metadata": {},
    "source": [
-    "<h1>Primer Proyecto</h1>"
+    "<h1>Proyecto Análisis A/B</h1>"
    ]
   },
   {
