--- a/aa_ab_mkt_test.ipynb
+++ b/aa_ab_mkt_test.ipynb
@@ -477,7 +477,7 @@
    "id": "b5b6fb42",
    "metadata": {},
    "source": [
-    "#### Analisis preliminar de los datos por campo\n",
+    "## Analisis preliminar de los datos por campo\n",
     "\n",
     "* **user id:** Es el numero que identifica al cliente. Lo dejamos para analizar el comportamiento si se repiten.\n",
     "* **test group:** Nos indica si el cliente miró los avisos o lo vio en el servicio público.\n",
